--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -22,7 +22,20 @@
   padding: 16px;
 }
 
+.btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #ffffff;
+  border: none;
+  padding: 8px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
 .modal img {
+  position: relative;
   max-width: 100%;
   max-height: 100%;
   border-radius: 8px;
